# feynbot

./: .gitignore  .pre-commit-config.yaml  1401.0261-GPT-questions.txt  Dockerfile  README.md  config.yaml  nohup.out  questions.json  requirements.txt  ruff.toml  starter.py
ai-backend/: .dockerignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
ai-backend/alembic/: env.py
ai-backend/alembic/versions/: 7d1c96449297_initial_migration.py  849b77b6dfe6_add_search_feedback_table.py  9d0b2efe625a_initial_migration.py  f933aed30548_fix_queries_ir_uuid_default.py  fb7c57a4daeb_make_user_optional.py
ai-backend/backend/: config.py  main.py
ai-backend/backend/ir_pipeline/: app.py
ai-backend/backend/schemas/: feedback.py  query.py
ai-backend/backend/src/: database.py  main.py
ai-backend/backend/src/api/: v1.py
ai-backend/backend/src/ir_pipeline/: chains.py  orchestrator.py  schema.py  schemas.py
ai-backend/backend/src/ir_pipeline/tools/: inspire.py
ai-backend/backend/src/ir_pipeline/utils/: embeddings.py  inspire_formatter.py  utils.py  (+1 more)
ai-backend/backend/src/rag_pipeline/: rag_pipeline.py  schemas.py  utils.py
ai-backend/backend/src/schemas/: feedback.py  query.py  search_feedback.py
ai-backend/backend/src/utils/: langfuse.py
ai-backend/backend/views/: v1.py
ai-backend/scripts/: embeddings.py  embeddings_acc.py  retrieve.py  utils.py
ai-backend/src/: database.py  main.py  models.py
ai-backend/src/api/: v1.py
ai-backend/src/config/: prompts.yml
ai-backend/src/ir_pipeline/: app.py  chains.py  llm_response.py  orchestrator.py
ai-backend/src/ir_pipeline/tools/: inspire.py
ai-backend/src/ir_pipeline/utils/: inspire_formatter.py
ai-backend/src/models/: feedback.py  query_ir.py
ai-backend/src/schemas/: feedback.py  query.py
(+59 files in other folders)
