[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["PascalEgn <pascal.egner@googlemail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.15"
fastapi = {extras = ["standard"], version = "^0.115.7"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
