[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["PascalEgn <pascal.egner@googlemail.com>", "miguelgrc <miguel.g@cern.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.7"}
sqlalchemy = "^2.0.37"
alembic = "^1.14.1"
psycopg2-binary = "^2.9.10"
pyyaml = "^6.0.2"
langchain = {extras = ["community", "openai", "ollama"], version = "^0.3.24"}
opensearch-py = "^2.8.0"
prometheus-fastapi-instrumentator = "^7.0.2"
lark = "^1.2.2"
pymupdf = "^1.25.5"
langfuse = "^2.60.3"
transformers = "^4.51.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
